# duja

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  committed.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  monitor-quirk-report.yml
.github/workflows/: ci.yml  release.yml
crates/duja-app/: Cargo.toml  build.rs  duja.rc
crates/duja-app/examples/: gen_exe_icon.rs
crates/duja-app/src/: engine.rs  lib.rs  main.rs  protocol.rs  worker.rs
crates/duja-app/src/bin_support/: backend.rs  bounds.rs  cli.rs  clone_group.rs  counting.rs  dimming.rs  fmt.rs  gamma.rs  hotkey.rs  ipc.rs  logging.rs  mod.rs  motion.rs  num.rs  paths.rs  positioning.rs  rng.rs  run.rs  settings.rs  settings_apply.rs  startup.rs  state_store.rs  stress.rs  toast.rs  tray.rs  updates.rs
crates/duja-app/src/bin_support/tray/: geometry.rs  icon.rs
crates/duja-app/tests/: engine.rs  exe_icon.rs
crates/duja-core/: Cargo.toml
crates/duja-core/src/: caps.rs  continuum.rs  controller.rs  debounce.rs  dimmer.rs  id.rs  input_source.rs  lib.rs  manager.rs  model.rs  quirks.rs  sync.rs
crates/duja-core/src/config/: document.rs  error.rs  migrate.rs  mod.rs  persist.rs  schema.rs  state.rs
crates/duja-core/src/config/snapshots/: duja_core__config__migrate__tests__v0_to_v1_migration.snap
crates/duja-core/src/testing/: clock.rs  contract.rs  controller.rs  dimmer.rs  mod.rs
crates/duja-ddc/: Cargo.toml
crates/duja-ddc/src/: clock.rs  controller.rs  correlate.rs  ddcci.rs  fake.rs  lib.rs  tests.rs  transport.rs
crates/duja-ddc/src/ddcci/: tests.rs
crates/duja-ddc/src/mac/: mod.rs  sys.rs
crates/duja-ddc/src/win/: mod.rs  sys.rs
crates/duja-ddc/tests/: hardware.rs
crates/duja-dimmer/: Cargo.toml
crates/duja-dimmer/src/: lib.rs  mac_geom.rs  plan.rs  stub.rs
crates/duja-dimmer/src/mac/: edr.rs  gamma.rs  mod.rs  sys.rs
crates/duja-dimmer/src/win/: gamma.rs  hdr.rs  mod.rs  sys.rs
crates/duja-dimmer/tests/: macos_live.rs  windows_live.rs
crates/duja-ipc/: Cargo.toml
crates/duja-ipc/src/: endpoint.rs  frame.rs  lib.rs  protocol.rs
crates/duja-panel/: Cargo.toml
crates/duja-panel/src/: controller.rs  display_services.rs  error.rs  lib.rs  transport.rs  wmi.rs
crates/duja-platform/: Cargo.toml
crates/duja-platform/src/: installer_guard.rs  lib.rs  mac_events.rs  single_instance.rs
crates/duja-platform/src/autostart/: mac.rs  mod.rs  plist.rs  win.rs
crates/duja-platform/src/ipc/: mod.rs  noop.rs  unix_socket.rs  win_pipe.rs
crates/duja-platform/src/mac/: mod.rs  sys.rs
crates/duja-platform/src/win/: mod.rs  sys.rs
crates/duja-platform/tests/: ipc_pipe.rs  ipc_unix.rs
crates/duja-ui/: Cargo.toml  build.rs
crates/duja-ui/src/: accent.rs  command.rs  dpi.rs  flyout_vm.rs  generated.rs  icon.rs  lib.rs  model_sync.rs  settings_shell.rs  settings_vm.rs  shell.rs  throttle.rs  window_icon.rs
crates/duja-ui/tests/: smoke.rs
crates/duja-ui/ui/: app.slint  flyout.slint  settings.slint
crates/dujactl/: Cargo.toml
crates/dujactl/src/: backend.rs  cli.rs  fmt.rs  ipc.rs  main.rs  run.rs
docs/: STATUS.md  debt.md  future-vision.md  perf-budgets.md  qa-checklist.md  release-checklist.md  review-rubric.md
docs/adr/: 0001-ui-toolkit-slint.md  0002-own-windows-ddc-backend.md  0003-overlay-first-dimming.md  0004-stable-edid-identity.md  0005-threads-not-tokio.md  0006-ipc-transport-and-protocol.md  0007-config-schema-and-migrations.md  0008-licensing.md  0009-software-renderer-default.md  0012-binary-size-budget-variance.md  0013-macos-ddc-wrap-vs-vendor.md  0014-perceptual-continuum-v2.md  0015-update-check-on-by-default.md  0016-windows-distribution-and-signing.md  0017-engine-shutdown-lifecycle-contract.md  0018-app-owns-continuum-engine-owns-pacing.md  0019-version-ladder-and-release-trains.md  0020-release-integrity-and-signing-readiness.md  README.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_caps_string/: msi_mp273qp.txt
fuzz/corpus/fuzz_quirks_toml/: embedded.toml
fuzz/fuzz_targets/: fuzz_caps_string.rs  fuzz_ddc_packet.rs  fuzz_edid_parse.rs  fuzz_ipc_frame.rs  fuzz_quirks_toml.rs
packaging/windows/: duja.iss
quirks/: quirks.toml
scripts/: gen-social-preview.py
spikes/ddc/: Cargo.toml
spikes/ddc/src/: main.rs
spikes/eventloop/: Cargo.toml
spikes/eventloop/src/: main.rs
spikes/overlay/: Cargo.toml
spikes/overlay/src/: main.rs
xtask/: Cargo.toml
xtask/src/: dist.rs  main.rs
