# Duja workspace — see docs/adr/ for architecture decisions.

[workspace]
resolver = "2"
members = [
    "crates/duja-core",
    "crates/duja-ddc",
    "crates/duja-panel",
    "crates/duja-dimmer",
    "crates/duja-platform",
    "crates/duja-ipc",
    "crates/duja-ui",
    "crates/duja-app",
    "crates/dujactl",
    "xtask",
]
# `fuzz/` is its own workspace (cargo-fuzz + libfuzzer-sys, nightly to run); keep
# it out of the main graph so its deps never touch the release lockfile.
exclude = ["fuzz"]

[workspace.package]
version = "0.0.1"
edition = "2024"
# MSRV policy: "stable minus 2" (toolchain is 1.96.1), floor-bounded by Slint's
# MSRV once it lands. Verified by the `msrv` CI job.
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/itabajah/duja"
authors = ["Duja contributors"]
homepage = "https://github.com/itabajah/duja"

[workspace.dependencies]
# Inter-crate paths (single source of truth for internal deps).
duja-core = { path = "crates/duja-core" }
duja-ddc = { path = "crates/duja-ddc" }
duja-panel = { path = "crates/duja-panel" }
duja-dimmer = { path = "crates/duja-dimmer" }
duja-platform = { path = "crates/duja-platform" }
duja-ipc = { path = "crates/duja-ipc" }
duja-ui = { path = "crates/duja-ui" }
# External deps are added here (version-pinned once, referenced with
# `workspace = true`) at the phase where they are first used.
# Runtime: typed error enums per the error policy (§5). Runtime, no_std-free.
thiserror = "2"
# Runtime: lock-free MPMC channels for the std-thread actor model (ADR-0005).
crossbeam-channel = "0.5"
# Runtime (duja-platform, unix IPC transport, P6/P7): confined to the
# peer-credential seam (getpeereid / SO_PEERCRED) and euid/uid lookups; the
# sockets themselves are std::os::unix. Already in the graph transitively.
libc = "0.2"
# Runtime (config §7 + quirk DB): serde derive for the typed schemas;
# toml_edit (not `toml`) as the single shared TOML crate — its document model
# lets config round-trip unknown keys/comments, and its `serde` feature gives
# the quirk DB typed deserialisation; tempfile for same-dir atomic writes.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = { version = "0.25", features = ["serde"] }
tempfile = "3"
# Binaries only (§P3): ergonomic error bubbling in `main`. Library-style modules
# keep typed errors; only the thin binary wiring uses `anyhow`.
anyhow = "1"
# Dev-only: property-based testing for the pure-TDD kernel (continuum, EDID).
proptest = "1"
# Dev-only: snapshot testing for config migration fixtures (§4.1).
insta = { version = "1", features = ["toml"] }
# Windows DDC/CI backend (duja-ddc, P3): thin dxva2 + SetupAPI/registry EDID.
# Target-gated and feature-selected in the crate; default-features off keeps the
# dependency lean. Version matches the P1 spike (windows 0.62.x).
windows = { version = "0.62", default-features = false }
# macOS backend (duja-dimmer, P6): the objc2 ecosystem. objc2 core is 0.6.x; the
# framework crates (app-kit/foundation/core-graphics/core-foundation) are 0.3.x
# and pin objc2 0.6. dispatch2 (also objc2-family) marshals overlay ops onto the
# main queue. default-features off; each crate selects only the classes it needs
# (features are named per Objective-C class/header). Target-gated in the crate.
objc2 = { version = "0.6", default-features = false, features = ["std"] }
objc2-foundation = { version = "0.3", default-features = false }
objc2-app-kit = { version = "0.3", default-features = false }
objc2-core-graphics = { version = "0.3", default-features = false }
objc2-core-foundation = { version = "0.3", default-features = false }
dispatch2 = { version = "0.3", default-features = false, features = ["std", "objc2"] }
# macOS DDC/CI backend (duja-ddc, P6): CoreGraphics display enumeration, IOKit
# service iteration, and CoreFoundation container types. This is the same thin,
# MIT/Apache-2.0 slice the `ddc-macos` crate is built on (ADR-0013); the private
# IOAVService/CoreDisplay symbols are resolved at runtime via dlsym (mac::sys),
# not through any crate. Target-gated so no non-macOS build ever sees them.
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = "0.25"
io-kit-sys = "0.5"
# UI (duja-ui, P4): Slint with the software renderer (ADR-0009 — 9.76 MB binary,
# ~17 MB idle RSS). Feature set + version pinned to the P1 `spike/eventloop`
# recipe: default-features off, then the winit backend, std, compat, and the
# software renderer. `slint-build` compiles the `.slint` markup in build.rs.
slint = { version = "1.17.1", default-features = false, features = ["compat-1-2", "backend-winit", "std", "renderer-software"] }
slint-build = "1.17.1"
# Dev-only (duja-ui, feature `smoke`): experimental headless backend for the
# component instantiation smoke test. Optional so the default build never pulls
# it; enabled under `--all-features`. The smoke test itself is `#[ignore]`.
i-slint-backend-testing = "1.17.1"
# Tray icon (duja-app, P4): the tray + menu on the Slint main thread. Version
# pinned to the P1 `spike/eventloop` recipe (tray-icon 0.24.1 + slint 1.17.1).
tray-icon = "0.24.1"
# Global hotkeys (duja-app, P5): system-wide accelerators registered on the
# Slint main thread. Version pinned to the P1 `spike/eventloop` recipe
# (global-hotkey 0.8.0 proven cohabiting with slint + tray-icon, zero idle
# wakeups — WM_HOTKEY dispatched by winit's pump).
global-hotkey = "0.8.0"
# Per-user config/state/log directories (duja-app, P4). Resolves the platform
# ProjectDirs for io.github.itabajah.duja.
directories = "6"
# Unix single-instance lock + uid lookup (duja-platform, P6 macOS / P7 Linux):
# rustix's safe wrappers give an advisory `flock` and `getuid` without any
# `unsafe` in the single-instance module. `fs` = flock; `process` = getuid.
rustix = { version = "1", features = ["fs", "process"] }
# NOTE: `core-foundation-sys` (declared above in the duja-ddc block) is also the
# macOS event pump's run-loop plumbing (duja-platform's dedicated CFRunLoop
# thread); the CoreGraphics display-reconfiguration and IOKit system-power
# externs are hand-declared in `duja-platform`'s `mac/sys.rs`.
# Structured logging (duja-app, P4): a WARN rotating file log by default,
# DEBUG-to-stderr under `--verbose`. EnvFilter for level control.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Build-only (duja-app build.rs, P4): embeds the PerMonitorV2 DPI-awareness
# application manifest into the executable.
embed-manifest = "1"
# Opt-in update check (duja-app, P5): a single HTTPS GET to the GitHub releases
# API. `default-features = false` + `tls` selects the rustls (ring) backend with
# bundled webpki roots — NO native-tls, so the binary stays self-contained and
# pulls in no OpenSSL/schannel. gzip/json/cookies are intentionally left off.
ureq = { version = "2", default-features = false, features = ["tls"] }

# ---------------------------------------------------------------------------
# Lint wall (ADR: bulletproof-production policy).
# Tests may unwrap: each crate carries
# `#![cfg_attr(test, allow(clippy::unwrap_used, clippy::expect_used, clippy::panic))]`.
# Every `#[allow]` in source requires a `// RATIONALE:` comment (review rubric).
# ---------------------------------------------------------------------------
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"

[profile.release]
# Budget: stripped binary <= 12 MB (docs/perf-budgets.md).
lto = "thin"        # try "fat" at P8 hardening
codegen-units = 1
strip = true
opt-level = 3
# Keep unwinding: thread supervision relies on catch_unwind (ADR-0005).
panic = "unwind"
