[package]
name = "xtask"
description = "Workspace automation for Duja (dist packaging, license bundling, manifest embedding). Not published."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true
