[package]
name = "duja-app"
description = "Duja — the lightweight monitor brightness controller (tray application)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "duja"
path = "src/main.rs"

[dependencies]
duja-core.workspace = true

[lints]
workspace = true
