[package]
name = "duja-app"
description = "Duja — the lightweight monitor brightness controller (tray application)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "duja"
path = "src/main.rs"

[dependencies]
duja-core.workspace = true
duja-ddc.workspace = true
duja-panel.workspace = true
duja-platform.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
