[package]
name = "duja-app"
description = "Duja — the lightweight monitor brightness controller (tray application)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "duja"
path = "src/main.rs"

[dependencies]
duja-core.workspace = true
duja-ddc.workspace = true
duja-panel.workspace = true
duja-platform.workspace = true
duja-ipc.workspace = true
duja-dimmer.workspace = true
duja-ui.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
thiserror.workspace = true
directories.workspace = true
# Opt-in update check (P5): one HTTPS GET + a tiny JSON parse of `tag_name`.
ureq.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# The tray app drives the Slint event loop directly (run_event_loop_until_quit,
# invoke_from_event_loop). Same version/features as duja-ui so one Slint backend
# is shared across the process.
slint.workspace = true

# Tray + cursor/work-area geometry + global hotkeys live only on Windows.
[target.'cfg(windows)'.dependencies]
tray-icon.workspace = true
global-hotkey.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    # Opening the releases page in the default browser (ShellExecuteW).
    "Win32_UI_Shell",
    # Querying the monitor scale under the cursor (GetDpiForMonitor) so the flyout
    # is sized + placed correctly BEFORE it is shown (item 1: one-shot present).
    "Win32_UI_HiDpi",
] }

[build-dependencies]
embed-manifest.workspace = true

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }
duja-dimmer = { workspace = true }
duja-platform = { workspace = true, features = ["test-support"] }
tempfile.workspace = true

[lints]
workspace = true
