[package]
name = "duja-ddc"
description = "External-monitor hardware control for Duja via DDC/CI (VCP brightness/contrast/input-source)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
duja-core.workspace = true
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Registry",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = { workspace = true }
core-foundation-sys = { workspace = true }
core-graphics = { workspace = true }
io-kit-sys = { workspace = true }

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }
proptest = { workspace = true }

[lints]
workspace = true
