[package]
name = "duja-dimmer"
description = "Software dimming for Duja: per-monitor click-through overlay windows (primary) and opt-in gamma ramps."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
duja-core.workspace = true

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
