[package]
name = "duja-panel"
description = "Internal laptop-panel brightness control for Duja (Windows WMI, macOS DisplayServices, Linux backlight/logind)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
duja-core.workspace = true

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
