[package]
name = "duja-panel"
description = "Internal laptop-panel brightness control for Duja (Windows WMI, macOS DisplayServices, Linux backlight/logind)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
duja-core.workspace = true
thiserror = { workspace = true }

# Windows-only WMI/COM backend. Pinned in this crate's manifest (not the
# workspace root) because it is platform- and crate-specific; keeping it here
# leaves the shared release lockfile and the root `[workspace.dependencies]`
# untouched for the other crates.
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_System_Wmi",
    "Win32_System_Variant",
    "Win32_System_Ole",
]

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
