[package]
name = "duja-panel"
description = "Internal laptop-panel brightness control for Duja (Windows WMI, macOS DisplayServices, Linux backlight/logind)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
duja-core.workspace = true
thiserror = { workspace = true }

# Windows-only WMI/COM backend. Pinned in this crate's manifest (not the
# workspace root) because it is platform- and crate-specific; keeping it here
# leaves the shared release lockfile and the root `[workspace.dependencies]`
# untouched for the other crates.
#
# NOTE: stays on 0.58 while the rest of the workspace is on 0.62 (a cargo-deny
# `multiple-versions = "warn"`, not an error). The 0.58→0.62 VARIANT API changed
# (`as_raw`, `BSTR: TryFrom<VARIANT>` removed), so unifying needs a real WMI
# rewrite — deferred to the P8 pass that also runs this path on real hardware
# (see docs/debt.md).
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Rpc",
    "Win32_System_Wmi",
    "Win32_System_Variant",
    "Win32_System_Ole",
]

# macOS internal-panel backend. Pinned here (not the workspace root) for the same
# reason as `windows`: platform- and crate-specific, keeping the shared release
# lockfile and root `[workspace.dependencies]` untouched. `core-graphics` (safe
# CGDisplay enumeration) is taken with `default-features = false` + `link` — the
# `link` feature emits the CoreGraphics framework link attribute, which is
# required; the higher-OS API-gating features are not. `libc` provides
# dlopen/dlsym for the private DisplayServices framework (bound by hand, since it
# has no published bindings).
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25", default-features = false, features = ["link"] }
libc = "0.2"

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
