[package]
name = "duja-platform"
description = "OS integration for Duja: hot-plug & power events, single-instance, autostart."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
duja-core.workspace = true
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Windows event pump: hidden top-level window + display/power/session
# notifications (P3). default-features off; enable only the modules we touch.
windows = { version = "0.62", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_RemoteDesktop",
    "Win32_System_LibraryLoader",
    "Win32_Devices_Display",
] }

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
