[package]
name = "duja-platform"
description = "OS integration for Duja: hot-plug & power events, single-instance, autostart."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
duja-core.workspace = true
# The named-pipe transport (P5) speaks the duja-ipc protocol over a raw byte
# stream, so the platform crate owns the confined Win32 `unsafe` while duja-ipc
# stays `#![forbid(unsafe_code)]` pure protocol.
duja-ipc.workspace = true
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }

[features]
# Exposes the in-memory `FakeAutostart` (and other seams) to downstream crates'
# tests, mirroring duja-core's `test-support` convention. Never in a release.
test-support = []

[target.'cfg(windows)'.dependencies]
# Windows event pump: hidden top-level window + display/power/session
# notifications (P3). default-features off; enable only the modules we touch.
windows = { version = "0.62", default-features = false, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_RemoteDesktop",
    "Win32_System_LibraryLoader",
    "Win32_Devices_Display",
    # Single-instance guard: a named mutex plus the token/SID lookup that
    # disambiguates the mutex name per user.
    "Win32_System_Threading",
    "Win32_Security",
    # Autostart: HKCU ...\CurrentVersion\Run value read/write/delete (P5).
    "Win32_System_Registry",
    # IPC named-pipe transport (P5): pipe create/connect/peek, file read/write,
    # the explicit DACL (SDDL → security descriptor), and the client PID/session
    # check.
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
] }

# -- Unix backends (macOS today, Linux at P7) -------------------------------
[target.'cfg(unix)'.dependencies]
# IPC unix-domain-socket transport (P6 macOS / P7 Linux): the sockets and
# permissions come from `std::os::unix`; `libc` is confined to the peer-credential
# seam (getpeereid / SO_PEERCRED) and the euid/uid lookups.
libc = { workspace = true }
# Single-instance guard: an advisory `flock` on a per-user lock file, plus the
# uid that names the `/tmp` runtime-dir fallback. rustix's safe wrappers keep
# `single_instance` free of `unsafe`.
rustix = { workspace = true }
# Resolves the macOS Application Support data dir (lock file) and the home dir
# (LaunchAgent plist).
directories = { workspace = true }

# -- macOS event pump -------------------------------------------------------
[target.'cfg(target_os = "macos")'.dependencies]
# CoreFoundation run-loop plumbing for the dedicated CFRunLoop thread. The
# CoreGraphics `CGDisplayRegisterReconfigurationCallback` and IOKit
# `IORegisterForSystemPower` externs are hand-declared in `mac/sys.rs` (no
# maintained safe binding covers them), each `unsafe` block carrying a SAFETY.
core-foundation-sys = { workspace = true }

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
