[package]
name = "duja-ui"
description = "Duja's Slint UI components and their plain-Rust view-models."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
duja-core.workspace = true

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
