[package]
name = "duja-ui"
description = "Duja's Slint UI components and their plain-Rust view-models."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
# Enables the `#[ignore]`d component-instantiation smoke test, which needs the
# experimental headless Slint backend. Pulled in under `--all-features`.
smoke = ["dep:i-slint-backend-testing"]

[dependencies]
duja-core.workspace = true
slint.workspace = true
i-slint-backend-winit.workspace = true
# Optional: only linked when the `smoke` feature is on (see `[features]`).
i-slint-backend-testing = { workspace = true, optional = true }

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
duja-core = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
