[package]
name = "dujactl"
description = "Command-line companion for Duja: scriptable control of the running app over local IPC."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "dujactl"
path = "src/main.rs"

[dependencies]
duja-core.workspace = true
duja-ipc.workspace = true
duja-platform.workspace = true
duja-ddc.workspace = true
duja-panel.workspace = true
anyhow.workspace = true

[lints]
workspace = true
