# Standalone throwaway spike — empty [workspace] detaches from parent lint wall.
[workspace]

[package]
name = "overlay"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "overlay"
path = "src/main.rs"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
]

[profile.release]
opt-level = 2
